Fix warehouse dir: s3a://electinfo/hive-warehouse → s3a://hive-warehouse/
Spark Connect and Zeppelin configs were pointing to the electinfo bucket
instead of the hive-warehouse bucket used by Hive metastore and Spark Operator.
This caused platinum tables to be written to a different location than other tiers.

Co-Authored-By: Craft Agent <agents-noreply@craft.do>

--- a/config/spark-defaults.conf
+++ b/config/spark-defaults.conf
@@ -17,7 +17,7 @@ spark.sql.catalogImplementation hive
 spark.sql.hive.metastore.version 4.1.0
 spark.sql.hive.metastore.jars maven
 spark.hadoop.hive.metastore.uris thrift://app-hive.electinfo.svc.cluster.local:9083
-spark.sql.warehouse.dir s3a://electinfo/hive-warehouse
+spark.sql.warehouse.dir s3a://hive-warehouse/
 
 # S3A for s3proxy
 spark.hadoop.fs.s3a.endpoint http://10.10.0.10:9000
