--- a/config/interpreter-settings.json
+++ b/config/interpreter-settings.json
@@ -13,7 +13,7 @@
     "spark.executor.instances": "2",
     "spark.sql.catalogImplementation": "hive",
     "spark.hadoop.hive.metastore.uris": "thrift://app-hive.electinfo.svc.cluster.local:9083",
-    "spark.sql.warehouse.dir": "s3a://electinfo/hive-warehouse",
+    "spark.sql.warehouse.dir": "s3a://hive-warehouse/",
     "spark.jars.packages": "org.apache.hadoop:hadoop-aws:3.4.2,io.graphframes:graphframes-spark4_2.13:0.10.0"
   }
 }
