feat(zeppelin): Add Unity Catalog as secondary named catalog
Add UC Spark connector and Delta Lake to Zeppelin's spark-defaults.conf.
Unity Catalog accessible via `unity.electinfo.<schema>.<table>` while
Hive remains the default catalog.

Co-Authored-By: Craft Agent <agents-noreply@craft.do>

--- a/config/spark-defaults.conf
+++ b/config/spark-defaults.conf
@@ -29,5 +29,11 @@ spark.hadoop.fs.s3a.secret.key electinfo123
 spark.hadoop.fs.s3a.aws.credentials.provider org.apache.hadoop.fs.s3a.SimpleAWSCredentialsProvider
 spark.hadoop.fs.s3a.change.detection.mode none
 
-# GraphFrames
-spark.jars.packages org.apache.hadoop:hadoop-aws:3.4.2,software.amazon.awssdk:bundle:2.29.6,io.graphframes:graphframes-spark4_2.13:0.10.0
+# Unity Catalog (named secondary catalog)
+spark.sql.catalog.unity io.unitycatalog.spark.UCSingleCatalog
+spark.sql.catalog.unity.uri http://app-unity-catalog.electinfo.svc.cluster.local:8080
+spark.sql.catalog.unity.token
+spark.sql.extensions io.delta.sql.DeltaSparkSessionExtension
+
+# GraphFrames + Unity Catalog + Delta Lake
+spark.jars.packages org.apache.hadoop:hadoop-aws:3.4.2,software.amazon.awssdk:bundle:2.29.6,io.graphframes:graphframes-spark4_2.13:0.10.0,io.unitycatalog:unitycatalog-spark_2.13:0.4.0,io.delta:delta-spark_2.13:4.1.0
