fix(spark): Bind unity catalog to electinfo catalog name
UCSingleCatalog needs explicit catalog binding to avoid nested namespace
errors. Query pattern is now: unity.gold.candidates (not unity.electinfo.gold.candidates)

Co-Authored-By: Craft Agent <agents-noreply@craft.do>

--- a/config/spark-defaults.conf
+++ b/config/spark-defaults.conf
@@ -33,6 +33,7 @@ spark.hadoop.fs.s3a.change.detection.mode none
 spark.sql.catalog.unity io.unitycatalog.spark.UCSingleCatalog
 spark.sql.catalog.unity.uri http://app-unity-catalog.electinfo.svc.cluster.local:8080
 spark.sql.catalog.unity.token
+spark.sql.catalog.unity.catalog electinfo
 spark.sql.extensions io.delta.sql.DeltaSparkSessionExtension
 
 # GraphFrames + Unity Catalog + Delta Lake
