fix(spark): Name Spark catalog 'electinfo' to match UC catalog
UCSingleCatalog auto-maps the Spark catalog name to the UC catalog name.
No hardcoded binding needed. Query: electinfo.gold.candidates
Additional catalogs can be added as separate spark.sql.catalog.* entries.

Co-Authored-By: Craft Agent <agents-noreply@craft.do>

--- a/config/spark-defaults.conf
+++ b/config/spark-defaults.conf
@@ -29,11 +29,10 @@ spark.hadoop.fs.s3a.secret.key electinfo123
 spark.hadoop.fs.s3a.aws.credentials.provider org.apache.hadoop.fs.s3a.SimpleAWSCredentialsProvider
 spark.hadoop.fs.s3a.change.detection.mode none
 
-# Unity Catalog (named secondary catalog)
-spark.sql.catalog.unity io.unitycatalog.spark.UCSingleCatalog
-spark.sql.catalog.unity.uri http://app-unity-catalog.electinfo.svc.cluster.local:8080
-spark.sql.catalog.unity.token
-spark.sql.catalog.unity.catalog electinfo
+# Unity Catalog (Spark catalog name matches UC catalog name)
+spark.sql.catalog.electinfo io.unitycatalog.spark.UCSingleCatalog
+spark.sql.catalog.electinfo.uri http://app-unity-catalog.electinfo.svc.cluster.local:8080
+spark.sql.catalog.electinfo.token
 spark.sql.extensions io.delta.sql.DeltaSparkSessionExtension
 
 # GraphFrames + Unity Catalog + Delta Lake
