--- a/config/spark-defaults.conf
+++ b/config/spark-defaults.conf
@@ -19,7 +19,8 @@ spark.sql.hive.metastore.jars maven
 spark.hadoop.hive.metastore.uris thrift://app-hive.electinfo.svc.cluster.local:9083
 spark.sql.warehouse.dir s3a://hive-warehouse/
 
-# S3A for s3proxy
+# S3A for s3proxy (s3:// mapped to S3A for Unity Catalog compatibility)
+spark.hadoop.fs.s3.impl org.apache.hadoop.fs.s3a.S3AFileSystem
 spark.hadoop.fs.s3a.endpoint http://10.10.0.10:9000
 spark.hadoop.fs.s3a.path.style.access true
 spark.hadoop.fs.s3a.impl org.apache.hadoop.fs.s3a.S3AFileSystem
