fix: disable UC credential renewal to avoid classloader issue
AwsVendedTokenProvider can't be loaded by Hadoop's FileSystem
classloader in Zeppelin (ClassNotFoundException). Setting
renewCredential.enabled=false makes the UC connector use direct
vended credentials instead of the renewal provider class.

Co-Authored-By: Craft Agent <agents-noreply@craft.do>

--- a/config/spark-defaults.conf
+++ b/config/spark-defaults.conf
@@ -34,6 +34,7 @@ spark.hadoop.fs.s3a.change.detection.mode none
 spark.sql.catalog.electinfo io.unitycatalog.spark.UCSingleCatalog
 spark.sql.catalog.electinfo.uri http://app-unity-catalog.electinfo.svc.cluster.local:8080
 spark.sql.catalog.electinfo.token
+spark.sql.catalog.electinfo.renewCredential.enabled false
 spark.sql.extensions io.delta.sql.DeltaSparkSessionExtension
 
 # GraphFrames + Unity Catalog + Delta Lake
