Add Unity Catalog config to Spark Connect server
Add UC catalog, Delta extension, s3:// scheme mapping, and
UC+Delta jars to spark-connect-server ConfigMap so pipeline
jobs can use the electinfo UC catalog via Spark Connect.

Co-Authored-By: Craft Agent <agents-noreply@craft.do>

--- a/manifests/spark-connect/base/spark-connect-server.yaml
+++ b/manifests/spark-connect/base/spark-connect-server.yaml
@@ -110,8 +110,18 @@ data:
     spark.metrics.conf                                   /opt/spark/conf/metrics.properties
 
     # Maven packages
-    spark.jars.packages                                  org.apache.hadoop:hadoop-aws:3.4.2,software.amazon.awssdk:bundle:2.29.6,org.neo4j:neo4j-connector-apache-spark_2.13:5.3.10_for_spark_3,org.postgresql:postgresql:42.7.1,io.graphframes:graphframes-spark4_2.13:0.10.0
+    spark.jars.packages                                  org.apache.hadoop:hadoop-aws:3.4.2,software.amazon.awssdk:bundle:2.29.6,org.neo4j:neo4j-connector-apache-spark_2.13:5.3.10_for_spark_3,org.postgresql:postgresql:42.7.1,io.graphframes:graphframes-spark4_2.13:0.10.0,io.unitycatalog:unitycatalog-spark_2.13:0.4.0,io.delta:delta-spark_2.13:4.0.1
     spark.jars.ivy                                       /nonexistent/.ivy2.5.2
+
+    # Unity Catalog
+    spark.sql.catalog.electinfo                          io.unitycatalog.spark.UCSingleCatalog
+    spark.sql.catalog.electinfo.uri                      http://app-unity-catalog.electinfo.svc.cluster.local:8080
+    spark.sql.catalog.electinfo.token
+    spark.sql.catalog.electinfo.renewCredential.enabled  false
+
+    # Delta Lake + S3 scheme mapping
+    spark.sql.extensions                                 io.delta.sql.DeltaSparkSessionExtension
+    spark.hadoop.fs.s3.impl                              org.apache.hadoop.fs.s3a.S3AFileSystem
 
     # Kubernetes settings
     spark.kubernetes.container.image                     localhost:32000/electinfo/spark-executor:latest
