--- a/images/spark-runner/Dockerfile
+++ b/images/spark-runner/Dockerfile
@@ -34,4 +34,8 @@ RUN curl -fsSL "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o /tm
     && /tmp/aws/install \
     && rm -rf /tmp/awscliv2.zip /tmp/aws
 
+# Install Unity Catalog CLI (copy from official UC image)
+COPY --from=unitycatalog/unitycatalog:v0.4.0 /home/unitycatalog /home/unitycatalog
+ENV PATH="/home/unitycatalog/bin:${PATH}"
+
 USER spark
