Update Tekton pipeline to restart spark-runner in spark namespace
The spark-runner container moved from a sidecar in util-rundeck
(rundeck ns) to its own deployment (spark ns). Update the
restart-spark-runner task to target the new location.

Co-Authored-By: Craft Agent <agents-noreply@craft.do>

--- a/tasks/pipeline.yaml
+++ b/tasks/pipeline.yaml
@@ -110,9 +110,9 @@ spec:
         name: electinfo-restart-deployment
       params:
         - name: deployment-name
-          value: util-rundeck
+          value: spark-runner
         - name: namespace
-          value: rundeck
+          value: spark
 ---
 apiVersion: tekton.dev/v1
 kind: Task
