--- a/config/spark-defaults.conf
+++ b/config/spark-defaults.conf
@@ -31,6 +31,7 @@ spark.hadoop.fs.s3a.aws.credentials.provider org.apache.hadoop.fs.s3a.SimpleAWSC
 spark.hadoop.fs.s3a.change.detection.mode none
 
 # Unity Catalog (Spark catalog name matches UC catalog name)
+spark.sql.defaultCatalog electinfo
 spark.sql.catalog.electinfo io.unitycatalog.spark.UCSingleCatalog
 spark.sql.catalog.electinfo.uri http://app-unity-catalog.electinfo.svc.cluster.local:8080
 spark.sql.catalog.electinfo.token
