Set spark.sql.sources.default=delta for UC OSS compatibility
DLT materialized views need Delta format tables so DeltaCatalog
can wrap them as DeltaTableV2 which supports TRUNCATE. Without
this, UC OSS tables are created as Parquet and TRUNCATE fails.

Co-Authored-By: Craft Agent <agents-noreply@craft.do>

--- a/config/spark-defaults.conf
+++ b/config/spark-defaults.conf
@@ -36,6 +36,7 @@ spark.sql.catalog.electinfo io.unitycatalog.spark.UCSingleCatalog
 spark.sql.catalog.electinfo.uri http://app-unity-catalog.electinfo.svc.cluster.local:8080
 spark.sql.catalog.electinfo.token
 spark.sql.catalog.electinfo.renewCredential.enabled false
+spark.sql.sources.default delta
 spark.sql.extensions io.delta.sql.DeltaSparkSessionExtension
 
 # GraphFrames + Unity Catalog + Delta Lake
