--- a/manifests/spark-connect/base/spark-connect-server.yaml
+++ b/manifests/spark-connect/base/spark-connect-server.yaml
@@ -121,6 +121,7 @@ data:
     spark.sql.catalog.electinfo.renewCredential.enabled  false
 
     # Delta Lake + S3 scheme mapping
+    spark.sql.sources.default                            delta
     spark.sql.extensions                                 io.delta.sql.DeltaSparkSessionExtension
     spark.hadoop.fs.s3.impl                              org.apache.hadoop.fs.s3a.S3AFileSystem
 
