spark: patch UCSingleCatalog.alterTable to delegate to underlying catalog
UC OSS v0.4.0 stubs alterTable with UnsupportedOperationException.
Spark 4.1.0 Declarative Pipelines DatasetManager calls alterTable during
table materialization to sync schema/properties. This patch creates a
subclass that delegates alterTable via reflection to the underlying
DelegatingCatalogExtension, which fully supports ALTER TABLE.

Co-Authored-By: Craft Agent <agents-noreply@craft.do>

--- a/config/spark-defaults.conf
+++ b/config/spark-defaults.conf
@@ -32,7 +32,7 @@ spark.hadoop.fs.s3a.change.detection.mode none
 
 # Unity Catalog (Spark catalog name matches UC catalog name)
 spark.sql.defaultCatalog electinfo
-spark.sql.catalog.electinfo io.unitycatalog.spark.UCSingleCatalog
+spark.sql.catalog.electinfo info.elect.spark.catalog.PatchedUCSingleCatalog
 spark.sql.catalog.electinfo.uri http://app-unity-catalog.electinfo.svc.cluster.local:8080
 spark.sql.catalog.electinfo.token
 spark.sql.catalog.electinfo.renewCredential.enabled false
