--- a/images/spark-base/pom.xml
+++ b/images/spark-base/pom.xml
@@ -20,5 +20,10 @@
       <artifactId>aws-java-sdk-bundle</artifactId>
       <version>1.12.780</version>
     </dependency>
+    <dependency>
+      <groupId>io.unitycatalog</groupId>
+      <artifactId>unitycatalog-spark_2.13</artifactId>
+      <version>0.4.0</version>
+    </dependency>
   </dependencies>
 </project>
