--- a/config/spark-defaults.conf
+++ b/config/spark-defaults.conf
@@ -40,4 +40,5 @@ spark.sql.sources.default delta
 spark.sql.extensions io.delta.sql.DeltaSparkSessionExtension
 
 # GraphFrames + Unity Catalog + Delta Lake
-spark.jars.packages org.apache.hadoop:hadoop-aws:3.4.2,software.amazon.awssdk:bundle:2.29.6,io.graphframes:graphframes-spark4_2.13:0.10.0,io.delta:delta-spark_2.13:4.0.1
+spark.jars.packages org.apache.hadoop:hadoop-aws:3.4.2,software.amazon.awssdk:bundle:2.29.6,io.graphframes:graphframes-spark4_2.13:0.10.0,io.unitycatalog:unitycatalog-spark_2.13:0.4.0,io.delta:delta-spark_2.13:4.0.1
+spark.jars /opt/spark/custom-jars/spark-catalog-patch-1.0.jar
