--- a/config/spark-defaults.conf
+++ b/config/spark-defaults.conf
@@ -38,6 +38,7 @@ spark.sql.catalog.electinfo.token
 spark.sql.catalog.electinfo.renewCredential.enabled false
 spark.sql.sources.default delta
 spark.sql.extensions io.delta.sql.DeltaSparkSessionExtension
+spark.sql.catalog.spark_catalog org.apache.spark.sql.delta.catalog.DeltaCatalog
 
 # GraphFrames + Unity Catalog + Delta Lake
 spark.jars.packages org.apache.hadoop:hadoop-aws:3.4.2,software.amazon.awssdk:bundle:2.29.6,io.graphframes:graphframes-spark4_2.13:0.10.0,io.unitycatalog:unitycatalog-spark_2.13:0.4.0,io.delta:delta-spark_2.13:4.0.1
