--- a/manifests/spark-connect/base/spark-connect-server.yaml
+++ b/manifests/spark-connect/base/spark-connect-server.yaml
@@ -125,6 +125,7 @@ data:
     # Delta Lake + S3 scheme mapping
     spark.sql.sources.default                            delta
     spark.sql.extensions                                 io.delta.sql.DeltaSparkSessionExtension
+    spark.sql.catalog.spark_catalog                      org.apache.spark.sql.delta.catalog.DeltaCatalog
     spark.hadoop.fs.s3.impl                              org.apache.hadoop.fs.s3a.S3AFileSystem
 
     # Kubernetes settings
