spark: use FileSystemBasedCheckpointFileManager for S3A
FileContextBasedCheckpointFileManager (default) fails with
FileNotFoundException on S3A because FileContext.create doesn't
handle virtual directories properly. Switch to FileSystem-based
manager which creates parent dirs via FileSystem.mkdirs.

Co-Authored-By: Craft Agent <agents-noreply@craft.do>

--- a/manifests/spark-connect/base/spark-connect-server.yaml
+++ b/manifests/spark-connect/base/spark-connect-server.yaml
@@ -169,6 +169,9 @@ data:
     spark.hadoop.fs.s3a.change.detection.mode            none
     spark.hadoop.fs.s3a.buffer.dir                       /tmp/spark-local
 
+    # Use FileSystem-based checkpoint manager for S3A compatibility
+    spark.sql.streaming.checkpointFileManagerClass       org.apache.spark.sql.execution.streaming.checkpointing.FileSystemBasedCheckpointFileManager
+
   metrics.properties: |
     # Enable Prometheus metrics export
     *.sink.prometheusServlet.class=org.apache.spark.metrics.sink.PrometheusServlet
