spark: add S3ACheckpointFileManager for streaming checkpoint compat
S3AFileSystem.listStatus() throws FileNotFoundException when a
directory doesn't exist, unlike HDFS which returns an empty array.
Spark's CompactibleFileStreamLog.compactInterval calls list() on
the sources directory before it exists, causing all streaming flows
to fail on first run with S3A storage.

This custom CheckpointFileManager catches FileNotFoundException in
list() and returns an empty array, matching HDFS behavior.

Co-Authored-By: Craft Agent <agents-noreply@craft.do>

--- a/manifests/spark-connect/base/spark-connect-server.yaml
+++ b/manifests/spark-connect/base/spark-connect-server.yaml
@@ -169,8 +169,8 @@ data:
     spark.hadoop.fs.s3a.change.detection.mode            none
     spark.hadoop.fs.s3a.buffer.dir                       /tmp/spark-local
 
-    # Use FileSystem-based checkpoint manager for S3A compatibility
-    spark.sql.streaming.checkpointFileManagerClass       org.apache.spark.sql.execution.streaming.checkpointing.FileSystemBasedCheckpointFileManager
+    # S3A-compatible checkpoint manager: catches FileNotFoundException on list()
+    spark.sql.streaming.checkpointFileManagerClass       info.elect.spark.streaming.S3ACheckpointFileManager
 
   metrics.properties: |
     # Enable Prometheus metrics export
