tekton: fix spark-connect restart to use deployment (not sparkapplication)
The spark-connect-server is a Deployment, not a SparkApplication CRD.
Using electinfo-restart-sparkapplication was a no-op since the resource
didn't exist, so the Connect server was never restarted after builds.

Co-Authored-By: Craft Agent <agents-noreply@craft.do>

--- a/tasks/pipeline.yaml
+++ b/tasks/pipeline.yaml
@@ -77,9 +77,9 @@ spec:
           operator: in
           values: ["true"]
       taskRef:
-        name: electinfo-restart-sparkapplication
+        name: electinfo-restart-deployment
       params:
-        - name: sparkapplication-name
+        - name: deployment-name
           value: spark-connect-server
         - name: namespace
           value: spark
