spark: fix UC CLI permissions in spark-runner image
The COPY --from=unitycatalog preserves restrictive 750 permissions
from the UC image, blocking the spark user (uid 185) from accessing
the target/ and examples/ dirs needed by the uc CLI script.

Co-Authored-By: Craft Agent <agents-noreply@craft.do>

--- a/images/spark-runner/Dockerfile
+++ b/images/spark-runner/Dockerfile
@@ -36,6 +36,7 @@ RUN curl -fsSL "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o /tm
 
 # Install Unity Catalog CLI (copy from official UC image)
 COPY --from=unitycatalog/unitycatalog:v0.4.0 /home/unitycatalog /home/unitycatalog
+RUN chmod -R a+rX /home/unitycatalog
 ENV PATH="/home/unitycatalog/bin:${PATH}"
 
 USER spark
