--- a/manifests/spark-connect/base/spark-connect-server.yaml
+++ b/manifests/spark-connect/base/spark-connect-server.yaml
@@ -111,6 +111,7 @@ data:
 
     # Maven packages (UC connector loaded here for proper classloader integration)
     spark.jars.packages                                  org.apache.hadoop:hadoop-aws:3.4.2,software.amazon.awssdk:bundle:2.29.6,org.neo4j:neo4j-connector-apache-spark_2.13:5.3.10_for_spark_3,org.postgresql:postgresql:42.7.1,io.graphframes:graphframes-spark4_2.13:0.10.0,io.unitycatalog:unitycatalog-spark_2.13:0.4.0-spark410,io.delta:delta-spark_2.13:4.0.1
+    spark.jars.repositories                               https://repo.elect.info/repository/maven-public/
     spark.jars.ivy                                       /nonexistent/.ivy2.5.2
     # Patched UC catalog JAR (loaded alongside spark.jars.packages for same classloader)
     spark.jars                                           /opt/spark/custom-jars/spark-catalog-patch-1.0.jar
