Make Unity Catalog the sole catalog, remove spark_catalog
Remove DeltaCatalog, DeltaSparkSessionExtension, and hardcoded
spark.sql.sources.default=delta from server config. UC is now the
only registered catalog regardless of table format.

PatchedUCSingleCatalog reads the provider from the session's
spark.sql.sources.default at runtime instead of hardcoding delta,
and only injects delta.feature.catalogManaged for Delta tables.

Co-Authored-By: Craft Agent <agents-noreply@craft.do>

--- a/manifests/spark-connect/base/spark-connect-server.yaml
+++ b/manifests/spark-connect/base/spark-connect-server.yaml
@@ -123,10 +123,7 @@ data:
     spark.sql.catalog.electinfo.token
     spark.sql.catalog.electinfo.renewCredential.enabled  false
 
-    # Delta Lake + S3 scheme mapping
-    spark.sql.sources.default                            delta
-    spark.sql.extensions                                 io.delta.sql.DeltaSparkSessionExtension
-    spark.sql.catalog.spark_catalog                      org.apache.spark.sql.delta.catalog.DeltaCatalog
+    # S3 scheme mapping
     spark.hadoop.fs.s3.impl                              org.apache.hadoop.fs.s3a.S3AFileSystem
 
     # Kubernetes settings
