Set catalogImplementation=in-memory to disable Hive metastore
Spark defaults to hive catalogImplementation when Hive JARs are on
the classpath. Since Hive metastore is scaled down and UC is the
sole catalog, explicitly disable it to prevent connection failures.

Co-Authored-By: Craft Agent <agents-noreply@craft.do>

--- a/config/spark-defaults.conf
+++ b/config/spark-defaults.conf
@@ -30,6 +30,9 @@ spark.hadoop.fs.s3a.secret.key electinfo123
 spark.hadoop.fs.s3a.aws.credentials.provider org.apache.hadoop.fs.s3a.SimpleAWSCredentialsProvider
 spark.hadoop.fs.s3a.change.detection.mode none
 
+# Disable Hive metastore (UC is the sole catalog)
+spark.sql.catalogImplementation in-memory
+
 # Unity Catalog (Spark catalog name matches UC catalog name)
 spark.sql.defaultCatalog electinfo
 spark.sql.catalog.electinfo info.elect.spark.catalog.PatchedUCSingleCatalog
