--- a/tasks/pipeline.yaml
+++ b/tasks/pipeline.yaml
@@ -83,6 +83,8 @@ spec:
           value: spark-connect-server
         - name: namespace
           value: spark
+        - name: argocd-app
+          value: app-spark-connect
 
     - name: restart-zeppelin
       runAfter:
@@ -98,6 +100,8 @@ spec:
           value: zeppelin-server
         - name: namespace
           value: zeppelin
+        - name: argocd-app
+          value: app-zeppelin
 
     - name: restart-spark-runner
       runAfter:
@@ -113,6 +117,8 @@ spec:
           value: spark-runner
         - name: namespace
           value: spark
+        - name: argocd-app
+          value: util-spark-runner
 
   finally:
     - name: refresh-rundeck-nodes
