--- a/tasks/pipeline.yaml
+++ b/tasks/pipeline.yaml
@@ -133,41 +133,40 @@ metadata:
 spec:
   description: Refresh Rundeck Kubernetes node cache after deployments restart
   steps:
-    - name: refresh
+    - name: get-token
       image: bitnami/kubectl:latest
+      volumeMounts:
+        - name: shared
+          mountPath: /shared
+      script: |
+        #!/bin/sh
+        set -e
+        kubectl get secret util-rundeck-env -n rundeck \
+          -o jsonpath='{.data.RD_TOKEN}' | base64 -d > /shared/rd-token
+    - name: refresh
+      image: curlimages/curl:latest
+      volumeMounts:
+        - name: shared
+          mountPath: /shared
       script: |
         #!/bin/sh
         set -e
 
-        # Get Rundeck API token from its secret
-        RD_TOKEN=$(kubectl get secret util-rundeck-env -n rundeck \
-          -o jsonpath='{.data.RD_TOKEN}' | base64 -d)
-
+        RD_TOKEN=$(cat /shared/rd-token 2>/dev/null || echo "")
         if [ -z "$RD_TOKEN" ]; then
           echo "WARNING: Could not retrieve Rundeck API token, skipping refresh"
           exit 0
         fi
 
         RD_URL="https://rundeck.elect.info"
+        AUTH="X-Rundeck-Auth-Token: $RD_TOKEN"
 
         echo "Refreshing Rundeck node sources for project electinfo..."
 
-        # Get resource model sources
-        SOURCES=$(wget -q -O - \
-          --header="Accept: application/json" \
-          --header="X-Rundeck-Auth-Token: $RD_TOKEN" \
-          "$RD_URL/api/48/project/electinfo/sources" 2>&1) || true
-
-        if echo "$SOURCES" | grep -q "error"; then
-          echo "WARNING: Could not list sources: $SOURCES"
-          echo "Falling back to cache-refresh endpoint..."
-        fi
-
         # Trigger cache refresh for each source
         for INDEX in 1 2 3; do
-          RESULT=$(wget -q -O - --method=POST \
-            --header="Accept: application/json" \
-            --header="X-Rundeck-Auth-Token: $RD_TOKEN" \
+          RESULT=$(curl -sk -X POST \
+            -H "Accept: application/json" -H "$AUTH" \
             "$RD_URL/api/48/project/electinfo/source/$INDEX/resources" 2>&1) || true
           echo "Source $INDEX refresh: $RESULT"
         done
@@ -175,12 +174,13 @@ spec:
         # Wait for cache to settle then verify
         sleep 5
         echo "Verifying spark-runner node..."
-        NODES=$(wget -q -O - \
-          --header="Accept: application/json" \
-          --header="X-Rundeck-Auth-Token: $RD_TOKEN" \
+        NODES=$(curl -sk -H "Accept: application/json" -H "$AUTH" \
           "$RD_URL/api/48/project/electinfo/resources?filter=spark-runner" 2>&1) || true
         echo "Current spark-runner nodes: $NODES"
         echo "Rundeck node refresh complete"
+  volumes:
+    - name: shared
+      emptyDir: {}
 ---
 apiVersion: tekton.dev/v1
 kind: Task
