Force catalogImplementation=in-memory via --conf CLI flag
SparkConnectServer auto-enables Hive support when Hive JARs are
on the classpath, overriding the properties file value. CLI --conf
flags have highest precedence and cannot be overridden.

Co-Authored-By: Craft Agent <agents-noreply@craft.do>

--- a/manifests/spark-connect/base/spark-connect-server.yaml
+++ b/manifests/spark-connect/base/spark-connect-server.yaml
@@ -50,7 +50,8 @@ spec:
                 --deploy-mode client \
                 --name spark-connect-server \
                 --properties-file /opt/spark/conf/spark-defaults.conf \
-                --conf spark.driver.host=$POD_IP
+                --conf spark.driver.host=$POD_IP \
+                --conf spark.sql.catalogImplementation=in-memory
           env:
             - name: POD_IP
               valueFrom:
