Disable provenance attestation for reproducible image digests
BuildKit generates attestation manifests with timestamps on every
build, causing different digests even when all layers are cached.
--provenance=false produces identical digests for identical content,
so the digest comparison correctly skips pod restarts.

Co-Authored-By: Craft Agent <agents-noreply@craft.do>

--- a/tasks/pipeline.yaml
+++ b/tasks/pipeline.yaml
@@ -417,7 +417,7 @@ spec:
         # Build all targets with a single bake command
         TARGETS="$(params.targets)"
         echo "=== Building targets: $TARGETS ==="
-        docker buildx bake --file docker-bake.hcl --push $TARGETS
+        docker buildx bake --file docker-bake.hcl --push --provenance=false $TARGETS
 
         echo "Build complete!"
       volumeMounts:
