Map spark_catalog to PatchedUCSingleCatalog for DLP compatibility
DLP full-refresh-all mode references spark_catalog.bronze for
internal DROP operations regardless of defaultCatalog setting.
Mapping spark_catalog to UC ensures all catalog operations go
through the same path.

Co-Authored-By: Craft Agent <agents-noreply@craft.do>

--- a/manifests/spark-connect/base/spark-connect-server.yaml
+++ b/manifests/spark-connect/base/spark-connect-server.yaml
@@ -51,7 +51,10 @@ spec:
                 --name spark-connect-server \
                 --properties-file /opt/spark/conf/spark-defaults.conf \
                 --conf spark.driver.host=$POD_IP \
-                --conf spark.sql.catalogImplementation=in-memory
+                --conf spark.sql.catalogImplementation=in-memory \
+                --conf spark.sql.catalog.spark_catalog=info.elect.spark.catalog.PatchedUCSingleCatalog \
+                --conf spark.sql.catalog.spark_catalog.uri=http://app-unity-catalog.electinfo.svc.cluster.local:8080 \
+                --conf spark.sql.catalog.spark_catalog.token=
           env:
             - name: POD_IP
               valueFrom:
