Map spark_catalog to UC electinfo catalog via uc-catalog option
When PatchedUCSingleCatalog is initialized as spark_catalog, it
was looking for a UC catalog named "spark_catalog" which doesn't
exist. Added uc-catalog option to override the UC catalog name,
so spark_catalog.bronze resolves to electinfo.bronze in UC.

Co-Authored-By: Craft Agent <agents-noreply@craft.do>

--- a/manifests/spark-connect/base/spark-connect-server.yaml
+++ b/manifests/spark-connect/base/spark-connect-server.yaml
@@ -54,7 +54,8 @@ spec:
                 --conf spark.sql.catalogImplementation=in-memory \
                 --conf spark.sql.catalog.spark_catalog=info.elect.spark.catalog.PatchedUCSingleCatalog \
                 --conf spark.sql.catalog.spark_catalog.uri=http://app-unity-catalog.electinfo.svc.cluster.local:8080 \
-                --conf spark.sql.catalog.spark_catalog.token=
+                --conf spark.sql.catalog.spark_catalog.token= \
+                --conf spark.sql.catalog.spark_catalog.uc-catalog=electinfo
           env:
             - name: POD_IP
               valueFrom:
