Set hive.server2.authentication=NOSASL for Thrift Server
Spark Thrift Server defaults to SASL transport, but PyHive/Superset
connects with auth=NOSASL (plain binary). Without this, connections
fail with TSaslNegotiationException: Invalid status -128.

Co-Authored-By: Craft Agent <agents-noreply@craft.do>

--- a/manifests/spark-thrift/base/spark-thrift-server.yaml
+++ b/manifests/spark-thrift/base/spark-thrift-server.yaml
@@ -55,7 +55,8 @@ spec:
                 --conf spark.sql.catalog.spark_catalog.uri=http://app-unity-catalog.electinfo.svc.cluster.local:8080 \
                 --conf spark.sql.catalog.spark_catalog.token= \
                 --conf spark.sql.catalog.spark_catalog.uc-catalog=electinfo \
-                --conf spark.executor.extraClassPath=/opt/spark/work-dir/*
+                --conf spark.executor.extraClassPath=/opt/spark/work-dir/* \
+                --hiveconf hive.server2.authentication=NOSASL
           env:
             - name: POD_IP
               valueFrom:
